# datalib

./: .flake8  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: data_manipulation.rst  index.rst  ml.rst  statistics.rst  visualization.rst
docs/examples/: index.rst
scripts/: release.py
src/datalib/: __init__.py  data_manipulation.py  ml.py  statistics.py  visualization.py
tests/: test_data_manipulation.py  test_ml.py  test_statistics.py  test_visualization.py
