[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nf-datalib"
version = "0.1.0"
description = "A Python library for data manipulation and analysis"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Nader Ferjani", email = "ferjani.nader@hotmail.fr"},
]
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scikit-learn",
    "scipy>=1.10.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
doc = [
    "sphinx>=7.0",
    "sphinx_rtd_theme>=1.0",
]

[tool.pytest.ini_options]
addopts = "--cov=datalib"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.hatch.build.targets.wheel]
packages = ["src/datalib"] 